--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "cirrus",
+    "css",
+    "UI",
+    "framework",
+    "reset",
+    "scss",
+    "sass",
+    "css-reset"
+  ],
   "author": "Stanley Lim",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
